src/objects/Territory2.object
<CustomObject>
    <fields>
        <fullName>TerritoryField1__c</fullName>
        <description>Test</description>
        <label>TerritoryField1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TerritoryField3__c</fullName>
        <label>TerritoryField3</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TerritoryField4__c</fullName>
        <label>TerritoryField4</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TerritoryText1__c</fullName>
        <description>test</description>
        <label>TerritoryText1</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>